<resources>
    <string name="app_name">DnD Rules Lawyer</string>
    <string name="search_hint">Ask for a rule&#8230;</string>
    <string name="loading_indicator">Loading</string>
    <string name="loading_screen">Loading screen</string>
    <string name="search_empty_prompt">Enter a query to search for resources.</string>
    <string name="search_no_results">No results matched your search.</string>
    <string name="voice_input">Voice input</string>
    <string name="voice_permission_denied">Microphone permission is required for voice input.</string>
    <string name="search_results_error">Could not search rules.</string>
    <string name="rule_result_meta">%1$s - %2$s</string>
    <string name="favorite_add">Add favorite</string>
    <string name="favorite_remove">Remove favorite</string>
...
    <string name="delete_resource_confirm_message">This custom resource will be removed from your app.</string>
    <string name="delete_resource_failed">Could not delete resource.</string>
    <string name="linked_resource_missing">Could not open linked resource.</string>
    <string name="speech_error_failed">Speech recognition failed. Please try again.</string>
    <string name="speech_error_none">No speech recognized</string>
    <string name="speech_error_unavailable">Speech recognition is not available on this device.</string>
    <string name="filter_spells">Spells</string>
    <string name="filter_monsters">Monsters</string>
    <string name="filter_classes">Classes</string>
    <string name="filter_equipment">Equipment</string>
    <string name="filter_races">Races</string>
    <string name="filter_rules">Rules</string>
    <string name="filter_spell_cantrip">Cantrip</string>
    <string name="filter_spell_level">Level %1$d</string>
    <string name="filter_other">Other</string>
    <string name="filter_monster_cr_range">Challenge rating</string>
    <string name="filter_monster_cr_range_value">Challenge rating: %1$s - %2$s</string>
    <string name="filter_class">Class</string>
    <string name="filter_subclass">Subclass</string>
    <string name="filter_subrace">Subrace</string>
    <string name="filter_equipment_weapons">Weapons</string>
    <string name="filter_equipment_armor">Armor</string>
    <string name="filter_equipment_adventuring_gear">Adventuring Gear</string>
    <string name="filter_equipment_tools">Tools</string>
...
    <string name="filter_proficiencies">Proficiencies</string>
    <string name="filter_feats">Feats</string>
    <string name="filter_features">Features</string>
    <string name="filter_traits">Traits</string>
    <string name="filter_backgrounds">Backgrounds</string>
    <string name="nav_search">Search</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_add_resource">Add resource</string>
    <string name="nav_settings">Settings</string>
    <string name="create_resource_save">Save resource</string>
    <string name="create_resource_name_hint">Name</string>
    <string name="create_resource_description_hint">Short description</string>
    <string name="create_resource_homebrewery_url_hint">Homebrewery share link</string>
    <string name="create_resource_body_hint">Details</string>
    <string name="create_resource_name_required">Name is required.</string>
...
