<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:clipToPadding="false"
    android:padding="@dimen/screen_padding"
    tools:context=".MainActivity">
...
        app:layout_constraintBottom_toTopOf="@id/searchFiltersScroll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondaryFiltersContainer">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResultsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_rule_resource" />

        <include
            android:id="@+id/searchLoadingIndicator"
            layout="@layout/view_loading_indicator"
            android:visibility="gone" />

        <TextView
            android:id="@+id/searchEmptyMessageText"
            android:layout_width="match_parent"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/filter_monster_cr_range"
                android:textAppearance="?attr/textAppearanceBodyMedium" />

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/monsterChallengeRatingSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:valueFrom="0"
                android:valueTo="1"
                app:values="@array/filter_monster_cr_default_slider_values" />
...
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/queryInput"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:hint="@string/search_hint"
            android:imeOptions="actionSearch"
            android:importantForAutofill="no"
...
