<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:id="@+id/mainDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
...
            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/mainFragmentContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <include
                android:id="@+id/mainLoadingOverlay"
                layout="@layout/view_loading_overlay" />

        </FrameLayout>

    </LinearLayout>

...
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="?attr/colorSurface"
        android:orientation="vertical">

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/mainNavigationView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="?attr/colorSurface"
            app:itemIconTint="?attr/colorPrimary"
            app:itemTextColor="?attr/colorOnSurface"
            app:menu="@menu/main_drawer_menu" />

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/settingsNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            app:itemIconTint="?attr/colorPrimary"
            app:itemTextColor="?attr/colorOnSurface"
            app:menu="@menu/settings_drawer_menu" />
...
